3/3/2025
	Made minor update to utility function to better allow model variables to be passed as values to conditional sum and count lines.
	Added forceTermination flag to hanging clues and conditional lines, allowing the possibility that a value may still be returned if no terminator is found.
	Added support for conditional cross counts, which perform counts across all orthogonal rays emanating from a cell...used to support
	watchtower constraint.
	Added test case.

2/28/2025 ter
	Added terminator for conditional and hanging clues that allows user to pass a model variable to indicate the position at which to terminate.
	Added test cases.
	This is the first time I've used model variables in my solver building, and it is super powerful, but probably unfair 
	to the average user.

2/28/2025 bis
	Added support for comparators (LE, GE, NE) in hanging count and sum clues, and conditional sum lines and conditional count lines.
	Added new selection criteria of property runs, e.g. parity run, entropy run, etc., which allow comparisons against groups 
	of contiguous digits satisfying the associated property. Think "second group of odd digits sums to 18" or "last group of low digits has two digits".
	Added new selection criteria of ascending/descending runs, as above.
	Added test cases.

2/28/2025
	Added support for star battle/sudoku hybrid puzzles.

2/26/2025 bis
	Added support for ranked cages, with test cases.
	Added additional test cases.

2/26/2025
	Added support for repeated neighbors constraint, and added test case.
	Added support for slot machine, and added test case.
	Added additional test cases.

2/24/2025 bis
	Added test cases.

2/24/2025
	Eliminated terminateOnFirst argument from conditional lines and hanging clues in favor of a terminateOn argument, which defaults to the value 'First'.
	Any existing code for which terminateOnFirst was not set will continue to work. Any code that explicitly set terminateOnFirst=True can be patched by